[workspace]
members = [
    "contracts/keeper", 
    "contracts/vault", 
    "contracts/lp_token",  
    "contracts/dexter_generator/*", 
    "contracts/pools/*",
    "contracts/multi_staking",
    "contracts/router",
    "packages/*"
]


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true