[workspace]
members = [
    "contracts/keeper",
    "contracts/vault",
    "contracts/lp_token",
    "contracts/pools/*",
    "contracts/multi_staking",
    "contracts/router",
    "contracts/governance_admin",
    "contracts/superfluid_lp",
    "packages/*"
]

resolver = "2"


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true


[patch.'https://github.com/rust-lang/crates.io-index']
base64ct = { git = "https://github.com/RustCrypto/formats", tag = "base64ct/v1.6.0" }