[package]
name = "lp-token"
version = "1.0.0"
authors = ["Astroport"]
edition = "2021"
description = "Expanded implementation of a CW-20 compliant token for post intialization"
license = "MIT"
repository = "https://github.com/CosmWasm/cosmwasm-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
dexter = { path = "../../packages/dexter", default-features = false }
cw2 = "0.15"
cw20 = { version = "0.15" }
cw20-base = { version = "0.15", features = ["library"] }
cosmwasm-std = { version = "1.1" }
snafu = { version = "0.6" }
cosmwasm-schema = "1.1"
