[package]
name = "dexter-lp-token"
version = "1.0.0"
authors = ["Persistence Labs"]
edition = "2021"
description = "Expanded implementation of a CW-20 compliant token for post intialization"
license = "MIT"
repository = "https://github.com/CosmWasm/cosmwasm-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
dexter = { version = "1.3.0", path = "../../packages/dexter", default-features = false }
cw2 = "1.0.1"
cw20 = "1.0.1"
cw20-base = { version = "1.0.1", features = ["library"] }
cosmwasm-std = "1.5.0"
snafu = "0.7.4"
cosmwasm-schema = "1.5.0"
