[package]
name = "dexter-multi-staking"
version = "2.1.0"
authors = ["Persistence Labs"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = "1.0.1"
cw20 = "1.0.1"
cosmwasm-std = "1.2.1"
cw-storage-plus = "1.0.1"
schemars = "0.8.11"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
dexter = { path = "../../packages/dexter", default-features = false }
thiserror = "1.0.38"
cosmwasm-schema = "1.2.1"
serde-json-wasm = "0.5.0"
const_format = "0.2.30"
sylvia = "0.6.1"

[dev-dependencies]
cosmwasm-schema = "1.2.1"
lp-token = {path = "../lp_token"}
cw-multi-test = "0.16.2"
cw20-base = "1.0.1"
anyhow = "1.0.68"
