[package]
name = "dexter-multi-staking"
version = "2.1.0"
authors = ["Persistence Labs"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = "1.1.0"
cw20 = "1.1.0"
cosmwasm-std = "1.2.7"
cw-storage-plus = "1.1.0"
schemars = "0.8.12"
serde = { version = "1.0.171", default-features = false, features = ["derive"] }
dexter = { path = "../../packages/dexter", default-features = false }
thiserror = "1.0.43"
cosmwasm-schema = "1.2.7"
serde-json-wasm = "0.5.1"
const_format = "0.2.31"
sylvia = "0.6.1"

[dev-dependencies]
cosmwasm-schema = "1.2.7"
lp-token = {path = "../lp_token"}
cw-multi-test = "0.16.5"
cw20-base = "1.1.0"
anyhow = "1.0.72"
