[package]
name = "dexter-router"
version = "1.0.0"
authors = ["buidl@astrotechlabs.com"]
edition = "2021"
description = "A router contract - provides multi-step operations to facilitate single sign operation"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]


[dependencies]
dexter = { path = "../../packages/dexter", default-features = false }
cw20 = "1.1.0"
cw2 = "1.1.0"
cw20-base = { version = "1.1.0", features = ["library"] }
cosmwasm-std = "1.2.7"
cw-storage-plus = "1.1.0"
schemars = "0.8.12"
thiserror = "1.0.43"
serde = { version = "1.0.171", default-features = false, features = ["derive"] }
serde-json-wasm = "0.5.1"
cosmwasm-schema = "1.2.7"
const_format = "0.2.31"

[dev-dependencies]
# we only need to enable this if we use integration tests
cw-multi-test = "0.16.5"
dexter-vault = { path = "../vault"}
stable-pool = { path = "../pools/stable_pool" }
weighted-pool = { path = "../pools/weighted_pool"}
lp-token = { path = "../lp_token"}
cw20 = "1.1.0"
