[package]
name = "xyk-pool"
version = "1.0.0"
authors = ["AstroTechLabs"]
edition = "2021"
description = "A Dexter DEX pool implementing the standard constant product (XYK) AMM type"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
integer-sqrt = "0.1.5"
dexter = { path = "../../packages/dexter", default-features = false }
cw2 = { version = "0.13.2" }
cw20 = { version = "0.13.2" }
cosmwasm-std = "1.0"
cw-storage-plus = {version = "0.13.2"}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
protobuf = { version = "2", features = ["with-bytes"] }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
dexter-token = {path = "../token"}
cw-multi-test = "0.13.2"
dexter-vault = {path = "../vault"}
proptest = "0.10.1"
