[package]
name = "stable5pool"
version = "1.0.0"
authors = ["AstroTechLabs"]
edition = "2021"
description = "A Dexter DEX pool implementing the stable 3-pool AMM type"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
integer-sqrt = "0.1.5"
dexter = { path = "../../packages/dexter", default-features = false }
cw2 = "0.16.0"
cw20 = "0.16.0"
cosmwasm-std = "1.1.5"
cw-storage-plus = {version = "0.13.2"}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
protobuf = { version = "2", features = ["with-bytes"] }
itertools = "0.10"
serde-json-wasm = "0.4.1"
cosmwasm-schema = "1.1.5"

[dev-dependencies]
anyhow = "1.0"
sim = { git = "https://github.com/dexter-zone/stableswap_simulations.git", rev = "d40f0e77f6b21cccdd8415f6f36db31f76be2f3f", package = "sim" }
cosmwasm-schema = "1.0.0"
lp-token = {path = "../lp_token"}
cw-multi-test = "0.13.2"
dexter-vault = {path = "../vault"}
proptest = "0.10.1"
