[package]
name = "dexter-vault"
version = "1.0.0"
authors = ["AstroTechLabs"]
edition = "2021"
description = "Persistence DEX Factory contract - entry point to create new pools. Maintains directory for all pools"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
dexter = { path = "../../packages/dexter", default-features = false }
cosmwasm-std = "1.2.7"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
cw20 = "1.1.0"
itertools = "0.10.5"
schemars = "0.8.12"
serde = { version = "1.0.171", default-features = false, features = ["derive"] }
thiserror = "1.0.43"
protobuf = { version = "2", features = ["with-bytes"] }
serde-json-wasm = "0.5.1"
cosmwasm-schema = "1.2.7"
const_format = "0.2.31"

[dev-dependencies]
stable-pool = { path = "../pools/stable_pool" }
weighted-pool = { path = "../pools/weighted_pool"}
lp-token = { path = "../lp_token"}
dexter-multi-staking = { path = "../multi_staking"}
cw-multi-test = "0.16.5"
cw20 = "1.1.0"
