[package]
name = "dexter-vault"
version = "1.0.0"
authors = ["Persistence Labs"]
edition = "2021"
description = "Dexter Factory contract - entry point to create new pools. Maintains directory for all pools"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
dexter = { version = "1.3.0", path = "../../packages/dexter", default-features = false }
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
itertools = "0.10.5"
schemars = "0.8.11"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror = "1.0.38"
protobuf = { version = "2", features = ["with-bytes"] }
serde-json-wasm = "0.5.0"
cosmwasm-schema = "1.5.0"
const_format = "0.2.30"

[dev-dependencies]
dexter-stable-pool = { version = "1.1.0", path = "../pools/stable_pool" }
dexter-weighted-pool = { version = "1.1.0", path = "../pools/weighted_pool"}
lp-token = { version = "1.0.0", path = "../lp_token"}
dexter-multi-staking = { version = "3.0.0", path = "../multi_staking"}

cw-multi-test = "0.16.2"
cw20 = "1.0.1"
