[package]
name = "weighted-pool"
version = "1.0.0"
authors = ["AstroTechLabs"]
edition = "2021"
description = "A Dexter DEX pool implementing the generalized constant product AMM type as introduced by Balancer"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
integer-sqrt = "0.1.5"
dexter = { path = "../../packages/dexter", default-features = false }
cw2 = { version = "0.13.2" }
cw20 = { version = "0.13.2" }
cosmwasm-std = "1.0"
cw-storage-plus = {version = "0.13.2"}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
protobuf = { version = "2", features = ["with-bytes"] }
serde-json-wasm = "0.4.1"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.14.0"
dexter-vault = {path = "../vault"}
lp-token = {path = "../lp_token"}
proptest = "0.10.1"
