[package]
name = "dexter-generator"
version = "1.0.0"
authors = ["Astroport, Astrotechlabs"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
dexter = { path = "../../../packages/dexter", default-features = false }
cosmwasm-std = { version = "1.1" }
cw-storage-plus =  "0.15"
cw2 = "0.15"
cw20 = "0.15"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
protobuf = { version = "2", features = ["with-bytes"] }
cosmwasm-schema = "1.1"
serde-json-wasm = "0.4.1"

[dev-dependencies]
cw-multi-test = "0.13.2"
anchor-staking = { path = "../ref_staking"}
dexter-generator-proxy = { path = "../generator_proxy"}
dexter-vesting = {path = "../vesting"}
lp-token = {path = "../../lp_token"}
dexter-vault = { path = "../../vault"}
xyk-pool = { path = "../../pools/xyk_pool"}
