[package]
name = "dexter-generator-proxy"
version = "1.0.0"
authors = ["Astroport, AstrotechLabs"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0" }
cw-storage-plus = "0.13"
schemars = "0.8"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cw2 = "0.16.0"
cw20 = "0.16.0"
dexter = { path = "../../../packages/dexter", default-features = false }
cosmwasm-schema = "1.1.5"

[dev-dependencies]
cosmwasm-schema = { version = "1.0" }
