[package]
name = "dexter-generator-proxy"
version = "1.0.0"
authors = ["Astroport, AstrotechLabs"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.1" }
cw-storage-plus =  "0.15"
schemars = "0.8"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cw2 = "0.15"
cw20 = { version = "0.15" }
dexter = { path = "../../../packages/dexter", default-features = false }
cosmwasm-schema = "1.1"
serde-json-wasm = "0.4.1"

