[package]
name = "dexter-multi-staking"
version = "1.0.0"
authors = ["Persistence Labs"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = "0.15"
cw20 = { version = "0.15" }
cosmwasm-std = { version = "1.1" }
cw-storage-plus = { version = "0.15" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
dexter = { path = "../../../packages/dexter", default-features = false }
thiserror = { version = "1.0.20" }
cosmwasm-schema = "1.1"
serde-json-wasm = "0.4.1"

[dev-dependencies]
lp-token = {path = "../../lp_token"}
cw-multi-test = "0.13.2"
cw20-base = "0.15.0"