[package]
name = "dexter-vesting"
version = "1.0.0"
authors = ["Astroport"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = "0.16.0"
cw20 = "0.16.0"
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = { version = "0.13.2" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
dexter = { path = "../../../packages/dexter", default-features = false }
thiserror = { version = "1.0.20" }
cosmwasm-schema = "1.1.5"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0", default-features = false  }
lp-token = {path = "../../lp_token"}
cw-multi-test = "0.13.2"
